--- a/.github/workflows/ceei_jobs.yml
+++ b/.github/workflows/ceei_jobs.yml
@@ -15,8 +15,8 @@ jobs:
       uses: actions/setup-python@v3
     - name: Install dependencies
       run: |
-        apt-get update
-        apt-get install curl gdal-bin libgdal-dev 
+        sudo apt-get update
+        sudo apt-get install curl gdal-bin libgdal-dev 
         python3 -m pip install --upgrade pip
         python3 -m pip install -r requirements
     - name: Analysing the code with pylint
