--- a/.github/workflows/ceei_jobs.yml
+++ b/.github/workflows/ceei_jobs.yml
@@ -25,3 +25,9 @@ jobs:
     - name: Download data for processing
       run: |
         echo "TODO"
+    - name: Publish release
+      uses: softprops/action-gh-release@v2
+      #if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: |
+          ceei_jobs.csv
