--- a/.github/workflows/ceei_jobs.yml
+++ b/.github/workflows/ceei_jobs.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        lfs: 'true'
     - name: Set up Python 
       uses: actions/setup-python@v3
     - name: Install dependencies
@@ -23,9 +25,17 @@ jobs:
       run: |
         echo "Skipping pylint for now"
         # pylint africa.py
-    - name: Download data for processing
-      run: |
-        echo "TODO"
+    - name: Create Release
+        uses: actions/create-release@latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+            New ceei version
+          draft: false
+          prerelease: false
     - name: Publish release
       uses: softprops/action-gh-release@v2
       #if: startsWith(github.ref, 'refs/tags/')
