--- a/.github/workflows/ceei_jobs.yml
+++ b/.github/workflows/ceei_jobs.yml
@@ -2,7 +2,8 @@ name: CEEI jobs release
 
 on:
   push:
-
+    tags:        
+      - '*'
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -10,19 +11,6 @@ jobs:
     - uses: actions/checkout@v4
       with:
         lfs: 'true'
-    - name: Set up Python 
-      uses: actions/setup-python@v3
-    - name: Install dependencies
-      run: |
-        # sudo apt-get update
-        # sudo apt-get install curl gdal-bin libgdal-dev 
-        # python3 -m pip install --upgrade pip
-        # python3 -m pip install -r requirements
-        echo "Testing release not needed"
-    - name: Analysing the code with pylint
-      run: |
-        echo "Skipping pylint for now"
-        # pylint africa.py
     - name: Create Release
       uses: actions/create-release@latest
       if: startsWith(github.ref, 'refs/tags/')
